--- a/src/client/app/styles/main.css
+++ b/src/client/app/styles/main.css
@@ -122,22 +122,22 @@
 
 #profileOverlay{
   position: absolute;
-  top: 0;
+  bottom: 0;
   left: 0;
   width: 100%;
-  height: 100%;
-  text-align:center;
-  color:rgba(255,255,255,.85);
-  background:rgba(0,0,0,.75);
-  font-family: 'Libre Baskerville', serif;
-  font-weight: bold;
-  color:rgba(255,255,255,.85);
+  height: 50px;
+  text-align: center;
+  color: rgba(255,255,255,.85);
+  background: rgba(0,0,0,.75);
+  font-family: 'Roboto', sans-serif !important;
+  font-weight: normal;
+  color: #FFFFFF;
   font-size:24px;
   opacity:0;
-  padding: 50% 0 0 0;
-  -webkit-transition: opacity .25s ease;
-  -moz-transition: opacity .25s ease;
-  transition: opacity .25s ease;
+  padding: 5px 0 0 0;
+  -webkit-transition: opacity .20s ease;
+  -moz-transition: opacity .20s ease;
+  transition: opacity .20s ease;
 }
 
 #imageOverlay:hover #profileOverlay {
