--- a/src/client/app/views/details.html
+++ b/src/client/app/views/details.html
@@ -5,12 +5,17 @@
 <!-- SELLER DETAILS -->
 <div class=" customer-container">  
     <div class="row vendor-profile-header">
+        <div class="col-sm-6 col-md-5">
+            <div class="row vendor-profile-image">
 
-        <div class="col-sm-5 vendor-avatar">
-            <div class="vendor-avatar-img" ng-style="{'background-image': 'url('+vendorDetails.vendor.photo.image_url+')'}" style="background-size: cover; background-repeat: no-repeat; background-position: center;">
-                <!-- <img ng-src="{{vendorDetails.vendor.photo.image_url}}"> -->
+                <!-- DISPLAY VENDOR PROFILE IMAGE -->
                 <div class="col-xs-12">
-                        <span class="pull-right like-button-position" data-toggle="tooltip" style="display:inline-block" data-placement="left" title="{{!likeDisabled ? '' : 'Sign in to Like'}}">
+                    <img id="vendorProfileImage" ng-src="{{vendorDetails.vendor.photo.image_url}}"/>
+                </div>
+
+                <!-- DISPLAY LIKE BUTTON -->
+                <div class="col-xs-12 vendor-profile-like">
+                    <span class="pull-right" data-toggle="tooltip" style="display:inline-block" data-placement="left" title="{{!likeDisabled ? '' : 'Sign in to Like'}}">
                         <button ng-disabled="likeDisabled" ng-click="likeUnlikeItem(vendorDetails.vendor, 'vendor')" type="button" class="btn btn-default beLocal-btn-default">
                             <span class="glyphicon glyphicon-heart like-button" ng-class="{'like-button-liked' : vendorDetails.vendor.is_liked}"></span>
                             <span ng-hide="vendorDetails.vendor.is_liked">Like</span>
@@ -23,10 +28,9 @@
                 </div>
 
             </div>
-
         </div>
-
-        <div class="col-sm-7 vendor-header-content">
+        
+        <div class="col-sm-6 col-md-7">
 
             <span class="new-vendor-name-style">
                 {{vendorDetails.vendor.company_name}}
