angular-masonry to the rescue!
TIL: Always go one step further when researching solutions and using
AngularJS. Does a JS framework exist? Yes? Does one build specifically
for angular exist? Yes? Use that to save yourself immense amounts of
sadness.

--- a/src/client/app/views/details.html
+++ b/src/client/app/views/details.html
@@ -210,8 +210,8 @@
         <hr>
         <br>
 
-        <div class="row" style="padding-top:5px" id="masonry-container">
-            <div class="col-trending ms-item col-lg-3 col-md-4 col-xs-6" ng-repeat="item in vendorDetails.products" >
+        <div class="row" style="padding-top:5px" masonry>
+            <div class="col-trending ms-item col-lg-3 col-md-4 col-xs-6 masonry-brick" ng-repeat="item in vendorDetails.products" >
               <product-card data="item"></product-card>
             </div>
         </div>
