--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -29,7 +29,7 @@
 
         <div class="col-sm-8">
           <div class="row" masonry reload-on-show>
-            <div class="col-trending ms-market-item col-xs-6 masonry-brick" ng-repeat="market in marketList | orderBy:'address.hours.length':true" on-finish-render>
+            <div class="col-trending col-xs-6 masonry-brick" ng-repeat="market in marketList | orderBy:'address.hours.length':true">
               <market-card data="market"></market-card>
             </div>
           </div>
@@ -79,7 +79,7 @@
             </div>
 
             <!-- DISPLAY SIDE BAR OF ALL CATEGORIES & TAGS-->
-            <div class="col-sm-2 col-xs-6 tag-bar hidden-xs" affix offset-top="170" container-class="customer-container" scroll-element-class="tag-category-bar">
+            <div class="col-sm-2 col-xs-6 tag-bar hidden-xs" affix offset-top="225" container-class="customer-container" scroll-element-class="tag-category-bar">
                 <div class="tag-category-bar">
                   <hr>
                   <p class="small-header">Categories</p>
