Turned off CSS animations for Masonry for now

--- a/src/client/app/views/details.html
+++ b/src/client/app/views/details.html
@@ -210,7 +210,7 @@
         <hr>
         <br>
 
-        <div class="row" style="padding-top:5px" masonry>
+        <div class="row" style="padding-top:5px" masonry="{transitionDuration:'0'}">
             <div class="col-trending ms-item col-lg-3 col-md-4 col-xs-6 masonry-brick" ng-repeat="item in vendorDetails.products" >
               <product-card data="item"></product-card>
             </div>
