Nasty hack to fix masonry for now.
The only problem that angular-masonry is unable to solve is the issue
we’re getting when filtering products by tag/category. Here, we need to
either remove items from our masonry properly (using
addItems()/removeItems()) or figure out a better way to fire masonry
when filtering.

I explored some solutions for the latter (firing layout() for masonry
when ng-repeat finishes for example), but nothing worked until I tried
a simple timeout() solution.

--- a/src/client/app/views/search.html
+++ b/src/client/app/views/search.html
@@ -30,8 +30,8 @@
                 <div class="new-heading-style">
                     Search Results for "{{query}}" in {{selectedCategory}}
                 </div>
-                <div class="row" style="padding-top:5px" id="masonry-container">
-                    <div class="col-trending ms-item col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="item in productResults | filterMultiple:productFilterExpr | unique:id" >
+                <div class="row" style="padding-top:5px" masonry="{transitionDuration:'0'}" reload-on-show>
+                    <div class="col-trending masonry-brick col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="item in productResults | filterMultiple:productFilterExpr | unique:id" >
                         <product-card data="item"></product-card>
                     </div>
                 </div>
@@ -95,8 +95,8 @@
                 <div class="new-heading-style">
                     Search Results for "{{query}}"
                 </div>         
-                <div class="row" id="masonry-market-container">
-                    <div class="col-trending ms-market-item col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="market in marketResults" >
+                <div class="row" masonry="{transitionDuration:'0'}" reload-on-show>
+                    <div class="col-trending masonry-brick col-lg-3 col-md-4 col-sm-6 col-xs-6" ng-repeat="market in marketResults" >
                       <market-card data="market"></market-card>
                     </div>
               </div>
