--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -72,7 +72,7 @@
                 {{selectedCategory}}
               </div>
               <div class="row" style="padding-top:5px" masonry="{transitionDuration:'0'}" reload-on-show>
-                <div class="col-trending col-lg-3 col-md-4 col-xs-6 masonry-brick" ng-repeat="item in trendingProducts | filterMultiple:productFilterExpr | unique:id" >
+                <div class="col-trending col-lg-3 col-md-4 col-xs-6 masonry-brick"  on-finish-render ng-repeat="item in trendingProducts | filterMultiple:productFilterExpr | unique:id" >
                   <product-card data="item"></product-card>
                 </div>
               </div>
