Added the skeleton for the mailchimp welcome email.  There is a test key for the account which I will deactivate and change prior to launching this to the site.

--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -73,6 +73,10 @@
             </div>
         </div>
     </div>
+
+    <button ng-click="sendTheMail()">Send the Mail</button>
+
+
 <!--Display Seller's Locations-->
     <hr>
     <div class="row">
