Added tests for products
This covers creation (including image upload), editing, deletion, and
undoing deletion.

Btw, I added a picture of pears to the repo so that the tests will work
without you having to find a picture yourself.

--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -266,7 +266,7 @@
                         <div class="col-xs-9 col-sm-7 ">
                             <div class="card-lable-style">{{product.name}}</div>
                             <div class="location-details">
-                                <p><b>PRODUCT DETAILS:</b> {{product.description}}</p>
+                                <p><b>PRODUCT DETAILS:</b> <span id="pro-product-details">{{product.description}}</span></p>
                                 <p><b>CATEGORY:</b> {{product.category.name}} </p>
                                 <p><b>TAGS:</b><span ng-repeat="tag in product.tags"> {{tag}} &nbsp; </span></p>
                             </div>
