--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -218,7 +218,7 @@
                             </span>
                             <span ng-show="location.description">
                                 <p class="indent-after-first-line"><b>DETAILS:</b>
-                                    <span>{{location.description}}</span>
+                                    <span id="pro-cust-description">{{location.description}}</span>
                                 </p>
                             </span>
                         </div>
@@ -687,7 +687,7 @@
                                     <div class="col-xs-12 col-md-12">
                                           <div class="form-group" ng-class="{ 'has-error' : (locationForm.addressText.$invalid ) && newLocationSubmitted }">
                                             <label class="control-label">Address</label>
-                                            <input type="text" autocomplete="off" name="addressText" typeahead="result.formatted_address for result in getLocation($viewValue)" typeahead-on-select="makeSelection($item)" class="form-control" ng-model="addressSearchText" placeholder="Search for an Address" required>
+                                            <input id="address-typeahead" type="text" autocomplete="off" name="addressText" typeahead="result.formatted_address for result in getLocation($viewValue)" typeahead-on-select="makeSelection($item)" class="form-control" ng-model="addressSearchText" placeholder="Search for an Address" required>
                                             <span class="error pull-right" ng-show="newLocationSubmitted && locationForm.addressText.$invalid">
                                                 {{addressErrorString}}.
                                             </span>
