Basic UI and logic for recurring selling locations
After much thought, I decided to move the recurrence objects into
SellerLocations and Markets respectively, as having one for every
single hour in an OpeningHours object introduced a HUGE amount of
overhead for no reason.

Now, we’ll be able to quickly determine if a SellerLocation or Market
is recurring without having to introduce a bunch of changes to the
hours logic that we had going previously. There’s still a lot of work
that needs to be done here, but I think this is a decent start.

--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -684,7 +684,75 @@
                                             </ng-form>                                        
                                         </div>
                                     </div>
-                                </div>                       
+                                </div>
+                                <div ng-hide="locationType">
+                                    <label>Repeat:</label>
+                                    <div class="well">
+                                        <ng-form name="recurrenceForm">                                       
+                                            <div class="row">
+                                                <div class="col-xs-4">
+                                                      <div class="form-group" ng-class="{ 'has-error' : (recurrenceForm.addressText.$invalid ) && newLocationSubmitted }">
+                                                        <label class="control-label">Repeats:</label>
+                                                        <select ng-model="recurrenceFrequency" id="frequencyPicker" class="form-control">
+                                                            <option value="2">Weekly</option>
+                                                            <option value="1">Monthly</option>
+                                                            <option value="0">Yearly</option>
+                                                        </select>
+                                                      </div>
+                                                </div>                                                                                               
+                                                <div class="col-xs-4">
+                                                      <div class="form-group" ng-class="{ 'has-error' : (recurrenceForm.addressText.$invalid ) && newLocationSubmitted }">
+                                                          <label class="control-label">Repeats Every:</label>
+                                                          <div>
+                                                          <select style="width:auto; display:inline; margin-right: 10px;" ng-model="recurrenceInterval" id="internvalPicker" class="form-control">
+                                                              <option ng-repeat="a in range(10) track by $index" value="{{$index+1}}">{{$index + 1}}</option>
+                                                          </select>
+                                                          <span ng-show="recurrenceFrequency == 2">week<span ng-show="recurrenceInterval !== 1">s</span></span>
+                                                          <span ng-show="recurrenceFrequency == 1">month<span ng-show="recurrenceInterval !== 1">s</span></span>
+                                                          <span ng-show="recurrenceFrequency == 0">year<span ng-show="recurrenceInterval !== 1">s</span></span>  
+                                                          </div>
+                                                      </div>
+                                                </div>                                                 
+                                                <div class="col-xs-4">
+                                                    <div class="form-group">
+                                                      <label>Start Date:</label>                      
+                                                      <div class="input-group" ng-class="{ 'has-error' : newLocationSubmitted && recurrenceForm.recurrenceStartDateField.$invalid }">
+                                                        <input required type="text" name="recurrenceStartDateField" class="form-control date-picker" show-weeks="false" show-button-bar="false" datepicker-popup="MM/dd/yyyy" ng-model="recurrenceStartDate" is-open="startOpened" min-date="minDate" max-date="'2015-06-22'" close-text="Close" />
+                                                        <span class="input-group-btn">
+                                                          <button class="btn btn-default" ng-click="openStart($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                                                        </span>                       
+                                                      </div>
+                                                    </div>                               
+                                                </div>                                             
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-xs-12">
+                                                    <label>End Date:</label>
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-xs-1"></div>
+                                                <div class="col-xs-11">
+                                                    <input type="radio" name="endDateOptions" value="never" ng-model="repeatUntil" /> Never
+                                                </div>
+                                            </div>
+                                            <div class="row">
+                                                <div class="col-xs-1"></div>
+                                                <div class="col-xs-11">
+                                                    <input type="radio" name="endDateOptions" value="endDate" ng-model="repeatUntil" /> On
+                                                    <div class="form-group">                     
+                                                      <div class="input-group" ng-class="{ 'has-error' : newLocationSubmitted && recurrenceForm.recurrenceStartDateField.$invalid }">
+                                                        <input ng-disabled="repeatUntil === 'never'" required type="text" name="recurrenceStartDateField" class="form-control date-picker" show-weeks="false" show-button-bar="false" datepicker-popup="MM/dd/yyyy" ng-model="recurrenceEndDate" is-open="endOpened" min-date="minDate" max-date="'2015-06-22'" close-text="Close" />
+                                                        <span class="input-group-btn">
+                                                          <button ng-disabled="repeatUntil === 'never'" class="btn btn-default" ng-click="openEnd($event)"><i class="glyphicon glyphicon-calendar"></i></button>
+                                                        </span>                       
+                                                      </div>
+                                                    </div>
+                                                </div>
+                                            </div>                                            
+                                        </ng-form>                                        
+                                    </div>
+                                </div>                                                       
                                 <div class="row">
                                     <div class="col-xs-12 col-md-12">
                                           <div class="form-group" ng-class="{ 'has-error' : (locationForm.addressText.$invalid ) && newLocationSubmitted }">
