--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -624,7 +624,7 @@
                                         <div class="form-group">
                                           <label>Date:</label>                      
                                           <div class="input-group" ng-class="{ 'has-error' : newLocationSubmitted && locationForm.dateField.$invalid }">
-                                            <input required type="text" name="dateField" class="form-control date-picker" show-weeks="false" show-button-bar="false" datepicker-popup="MM/dd/yyyy" ng-model="locationDate" is-open="opened" min-date="minDate" max-date="'2015-06-22'" close-text="Close" />
+                                            <input required type="text" name="dateField" class="form-control date-picker" show-weeks="false" show-button-bar="false" datepicker-popup="MM/dd/yyyy" ng-model="locationDate" is-open="opened" min-date="minDate" close-text="Close" />
                                             <span class="input-group-btn">
                                               <button class="btn btn-default" ng-click="open($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                                             </span>                       
@@ -717,7 +717,7 @@
                                                     <div class="form-group">
                                                       <label>Start Date:</label>                      
                                                       <div class="input-group" ng-class="{ 'has-error' : newLocationSubmitted && recurrenceForm.recurrenceStartDateField.$invalid }">
-                                                        <input required type="text" name="recurrenceStartDateField" class="form-control date-picker" show-weeks="false" show-button-bar="false" datepicker-popup="MM/dd/yyyy" ng-model="recurrenceStartDate" is-open="startOpened" min-date="minDate" max-date="'2015-06-22'" close-text="Close" />
+                                                        <input required type="text" name="recurrenceStartDateField" class="form-control date-picker" show-weeks="false" show-button-bar="false" datepicker-popup="MM/dd/yyyy" ng-model="recurrenceStartDate" is-open="startOpened" close-text="Close" />
                                                         <span class="input-group-btn">
                                                           <button class="btn btn-default" ng-click="openStart($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                                                         </span>                       
@@ -742,7 +742,7 @@
                                                     <input type="radio" name="endDateOptions" value="endDate" ng-model="repeatUntil" /> On
                                                     <div class="form-group">                     
                                                       <div class="input-group" ng-class="{ 'has-error' : newLocationSubmitted && recurrenceForm.recurrenceStartDateField.$invalid }">
-                                                        <input ng-disabled="repeatUntil === 'never'" required type="text" name="recurrenceStartDateField" class="form-control date-picker cursor-default" show-weeks="false" show-button-bar="false" datepicker-popup="MM/dd/yyyy" ng-model="recurrenceEndDate" is-open="endOpened" min-date="minDate" max-date="'2015-06-22'" close-text="Close" />
+                                                        <input ng-disabled="repeatUntil === 'never'" required type="text" name="recurrenceStartDateField" class="form-control date-picker cursor-default" show-weeks="false" show-button-bar="false" datepicker-popup="MM/dd/yyyy" ng-model="recurrenceEndDate" is-open="endOpened" min-date="minDate" close-text="Close" />
                                                         <span class="input-group-btn">
                                                           <button ng-disabled="repeatUntil === 'never'" class="btn btn-default" ng-click="openEnd($event)"><i class="glyphicon glyphicon-calendar"></i></button>
                                                         </span>                       
