Got recurring dates displaying on client side
After wrestling with edge cases (and fixng them with horrible solutions
that should never be done again) I believe recurring dates are now
displaying on the client side correctly in all cases. This is going to
require thorough testing though!

--- a/src/client/app/views/seller.html
+++ b/src/client/app/views/seller.html
@@ -198,12 +198,16 @@
                                     {{location.address.hours[0].from_hour}} - 
                                     {{location.address.hours[0].to_hour}}
                                 </p>
+                                <p ng-show="location.recurrences"><b>DATES:</b>
+                                    {{location.recurrences.text | capitalize}} from {{location.real_start | date:"MMMM d'"}}
+                                    <span ng-show="location.recurrences.end_date"> to {{location.recurrences.end_date | date:"MMMM d'"}}</span>
+                                </p>                                
 
                                 <div ng-show="location.date == null" >
-                                <p><b>HOURS:</b>
+                                <p><b>HOURS<span ng-show="location.recurrences"> FOR THE WEEK OF {{getMonday(initDate(location.recurrences.next)) | date:"MMMM d'" | uppercase}}</span>:</b>
                                         <ul class="list-inline store-hours">&nbsp
                                         <li ng-repeat="day in location.address.hours">
-                                            <b>{{weekdays[day.weekday - 1]}}</b>: {{day.from_hour}} - {{day.to_hour}}
+                                            <span ng-hide="compareDates(getMonday(initDate(location.recurrences.next)), initDate(location.recurrences.start_date)) && day.weekday < initDate(location.real_start).getDay()"><b>{{weekdays[day.weekday - 1]}}</b>: {{day.from_hour}} - {{day.to_hour}}</span>
                                         </li>
 
                                         </ul>
