--- a/src/client/app/views/main.html
+++ b/src/client/app/views/main.html
@@ -70,11 +70,14 @@
             <div class="col-sm-10 col-xs-12">
               <div class="new-heading-style">
                 {{selectedCategory}}
-              </div>
+              </div> 
+              <div infinite-scroll="trendingProductsNextPage()" infinite-scroll-distance="1" infinite-scroll-disabled='fetchingData'>
               <div class="row" style="padding-top:5px" masonry="{transitionDuration:'0'}" reload-on-show>
-                <div class="col-trending col-lg-3 col-md-4 col-xs-6 masonry-brick"  on-finish-render ng-repeat="item in trendingProducts | filterMultiple:productFilterExpr | unique:id" >
+                <div class="col-trending col-lg-3 col-md-4 col-xs-6 masonry-brick"  on-finish-render ng-repeat="item in trendingProducts.results | filterMultiple:productFilterExpr | unique:id" >
                   <product-card data="item"></product-card>
                 </div>
+              </div>
+              <div ng-show='fetchingData'>Loading data...</div>
               </div>
             </div>
 
